--- a/RectangleMover/Base.lproj/Main.storyboard
+++ b/RectangleMover/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="NewRectButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="FUf-KQ-fYY"/>
+                                    <action selector="newRectButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="RzI-x7-Msk"/>
                                 </connections>
                             </button>
                         </subviews>
